--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
+diesel = { version = "1.4.4", features = ["postgres"] }
+dotenv = "0.15.0"
